# merge-sbom

./: .gitignore  Cargo.toml  README.md  mergedSbom.json  sbom1.json  sbom1.txt  sbom2.json  sbom2.txt
src/: combinable.rs  lib.rs  main.rs
