[package]
name = "merge-sbom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.14", features = ["derive"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
